Stop informing user when email doesn't exist for password reset
This prevents an attacker from discovering what emails are and aren't in our
system. Also, made the button on the "forgot password" form allow text to wrap,
and deleted Devise-specific translation files that are not available to
translators in favor of the keys in the files that are.

--- a/app/assets/stylesheets/users/registrations.scss
+++ b/app/assets/stylesheets/users/registrations.scss
@@ -139,6 +139,7 @@
   .btn-primary.btn-inat {
     margin-top: 20px;
     padding-bottom: 7px;
+    white-space: inherit;
   }
 
   .btn-link {
